# learning-quantum-computing

./: Cargo.toml  readme.md
src/: main.rs
src/module/: entangled_particle_n.rs  mod.rs  utils.rs
src/module/applications/: deutsch_josza.rs  ekkert_protocol.rs  grover.rs  mod.rs  quantum_teleportation.rs  superdense_coding.rs
src/module/gates/: basic.rs
src/module/simple_example_bb_84/: mod.rs  simple_example_bb_84.rs  simple_particle.rs
