[package]
name = "learning quantum computing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.33.2"    
rand ="0.9.1"


[lib]
path = "src/lib.rs"

[[bin]]
name = "learning quantum computing"
path = "src/main.rs"